--- a/ypakp/styling/appointment.css
+++ b/ypakp/styling/appointment.css
@@ -1,28 +1,17 @@
-.breadcrumb{
-    margin-left:40px;
-}
-
-.breadcrumb-item{
-    color: darkcyan;
-}
-
-.path{
-    height: 50px;
-}
-
 .appointment{
     background-color: grey;
     min-height: 100vh;
 }
 
 body {
-    background: grey;
+    background: #39456A;
      /* color: #fff;   */
 }
  
 section:first-of-type {
     /* background: linear-gradient(to right, #5d4157, #a8caba); */
-    background: grey;
+    background: #39456A;
+    
 } 
 
 
@@ -34,16 +23,18 @@ section:not(:first-of-type) {
 
 section:nth-of-type(2) {
 
-    background-image:url("../imgs/appointment2.png");
+    background-image:url("../imgs/appointment3.png");
     background-size:cover;
     background-position:center;
-    /* background-opacity: 0.4; */
+    /* opacity: 0.2; */
+
 
     /* background: red; */
 }
 
 section:nth-of-type(3) {
-    background-color: #DFF1F6;
+    /* background-color: #262E47; */
+   background-color: #6D7EB0;
     
 }
 
@@ -61,4 +52,25 @@ section:nth-of-type(5) {
 
 .col3{
     margin-top:25px;
+}
+
+
+/* Hide arrow buttons from number form in: */
+
+
+/* Chrome */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+  }
+
+.appointmentb{
+    white-space: nowrap;
+    text-align: center;
 }
