--- a/ypakp/views/appointment.html
+++ b/ypakp/views/appointment.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="../styling/appointment.css">
+<link rel="stylesheet" href="../styling/breadcrumb.css">
+
 <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet"> -->
 <!-- <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script> -->
 <script type='text/javascript' src='//code.jquery.com/jquery-1.8.3.js'></script>
@@ -47,10 +49,10 @@
     <div class="container py-5">
         <div class="row text-center">
             <div class="col-lg-9 mx-auto">
-                <h2 class="h1 mb-4" style="color:white;"><u>Κλείστε Ραντεβού με μόνο 1 κλικ!</u></h2>
+                <h2 class="h1 mb-4" style="color:white; margin-top:100px;"><u>Κλείστε Ραντεβού με μόνο 1 κλικ!</u></h2>
                 <p class="font-italic mb-4 " style="font-size:20px; color:white; ">Ύστερα απ'την απαίτηση πολλών καθημερινών χρηστών, το Υπουργείο Εργασίας πλέον διαθέτει την νέα λειτουργία "Ραντεβού στο λεπτό". Το μόνο που έχετε να κάνετε είναι να εισάγεται τα στοιχεία σας και το τμήμα της προτιμησής σας, και κλείσατε ραντεβού!</p>
                 <!-- Scroll to top -->
-                <a class="btn btn-primary px-4 btn-lg rounded-1 scroll-link" href="#two"><b>Κλείστε Ραντεβού!</b></a>
+                <a class="btn btn-primary px-4 btn-lg rounded-2 scroll-link" href="#two" style="font-size:25px; margin-top:40%; margin-bottom: -160px;"><b>Κλείστε Ραντεβού!</b></a>
             </div>
         </div>
     </div>
@@ -59,62 +61,80 @@
 <!-- Demo section 2-->
 <section class="py-5 d-flex align-items-center" id="two">
     <div class="container py-5">
+        <form action="../routes/app_confirmed.php" method="post">
+        <div class="container py-5">
 
         <div class="row row-cols-3 text-center">
 
             <!-- First Name -->
             <div class="col3">
                 <!-- <input type="text" class="form-control" placeholder="Όνομα" value="Mark" required> -->
-                <input type="text" class="form-control form-control-lg" placeholder="Όνομα" aria-label="Όνομα" required>
+                <input type="text" class="form-control form-control-lg" name="firstname" placeholder="Όνομα" aria-label="Όνομα" required>
             </div>
 
             <div class="col3">
-                <input type="text" class="form-control form-control-lg" placeholder="Επώνυμο" aria-label="Επώνυμο" required>
+                <input type="text" class="form-control form-control-lg" name="lastname" placeholder="Επώνυμο" aria-label="Επώνυμο" required>
             </div>
 
             <div class="col3">
-                <input type="text" class="form-control form-control-lg" placeholder="Αστυνομική Ταυτότητα (Α.Κ)" aria-label="Αστυνομική Ταυτότητα" required>
+                <input type="text" class="form-control form-control-lg" name="id" placeholder="Αστυνομική Ταυτότητα (Α.Κ)" aria-label="Αστυνομική Ταυτότητα" required>
             </div>
             
             <div class="col3">
-                <input type="text" class="form-control form-control-lg" placeholder="Διεύθυνση" aria-label="Διεύθυνση" required>
+                <input type="text" class="form-control form-control-lg" name="address" placeholder="Διεύθυνση" aria-label="Διεύθυνση" required>
             </div>
 
             <div class="col3">
-                <input type="text" class="form-control form-control-lg" placeholder="Τηλέφωνο Επικοινωνίας" aria-label="Τηλέφωνο" required>
+                <!-- <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"> -->
+                <input type="number" class="form-control form-control-lg" name="phonecall" placeholder="Τηλέφωνο Επικοινωνίας" pattern="[0-9]{10}" aria-label="Τηλέφωνο" required >
             </div>
 
             <div class="col3">
-                <input type="text" class="form-control form-control-lg" placeholder="Ηλεκτρονικό Ταχυδρομείο (Email)" aria-label="email" required>
+                <input type="text" class="form-control form-control-lg" name="mail" placeholder="Ηλεκτρονικό Ταχυδρομείο (Email)" aria-label="email" required>
             </div>
 
             <div class="col3">
                 <div class="input-group date">
-                  <input type="text" class="form-control form-control-lg" placeholder="Ημερομηνία" aria-label="date"> <span class="input-group-addon"><i class="far fa-calendar-alt btn btn-primary" style="font-size:30px; margin-top:2px; margin-left:5px;"></i></span>
+                  <input type="text" class="form-control form-control-lg" name="date" placeholder="Ημερομηνία" aria-label="date"> <span class="input-group-addon"><i class="far fa-calendar-alt btn btn-primary" style="font-size:30px; margin-top:2px; margin-left:5px;"></i></span>
                 </div>
             </div>
 
             <div class="col3">
-                <label for="appt-time" style="font-size:30px; margin-right:35px;" text-muted>Επιλέξτε ώρα: </label>
+                <label for="appt-time" style="font-size:29px; margin-right:40px; color: white;" text-muted><b>Επιλέξτε ώρα:</b></label>
                 <input id="appt-time" type="time" name="appt-time" placeholder="Ώρα" style="font-size:30px;">
             </div>
 
             <div class=col3>
-                <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" placeholder="Επιλέξτε τμήμα">
+                <select class="form-select form-select-lg mb-3" name="department" aria-label=".form-select-lg example" placeholder="Επιλέξτε τμήμα">
                     <option selected>Επιλέξτε Τμήμα</option>
                     <option disabled role=separator>
-                    <option value="1">Τμήμα Ασφαλίσεων</option>
-                    <option value="2">Τμήμα Δώρων & Επιδομάτων</option>
-                    <option value="3">Tμήμα Καταγγελιών</option>]
-                    <option value="4">Tμήμα Δηλώσεων</option>
-                    <option value="5">Tμήμα Ανέργων</option>
+                    <option value="Τμήμα Ασφαλίσεων">Τμήμα Ασφαλίσεων</option>
+                    <option value="Τμήμα Δώρων & Επιδομάτων">Τμήμα Δώρων & Επιδομάτων</option>
+                    <option value="Tμήμα Καταγγελιών">Tμήμα Καταγγελιών</option>]
+                    <option value="Tμήμα Δηλώσεων">Tμήμα Δηλώσεων</option>
+                    <option value="Tμήμα Ανέργων">Tμήμα Ανέργων</option>
                   </select>
             </div>
 
-            
-
+            <div class="col-lg-12">
+                <label for="exampleFormControlTextarea1" class="form-label"></label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" name="exampleFormControlTextarea1" rows="3" placeholder="Σχόλια" style="padding-bottom:3em;"></textarea>
+            </div>
 
     </div>
+
+    <div class="row text-center">
+        <div class="col-lg-9 mx-auto" style="margin-top:15em;">
+        <!-- <div class="d-grid gap-2 col-3 mx-auto" style="margin-top:15em;"> -->
+            <a href="../routes/app_confirmed.php">
+                <button type="submit" class="btn btn-lg btn-success rounded-3 appointmentb" style="padding-top:20px; padding-bottom: 20px;">    <b><u>Επιβεβαίωση Δήλωσης Ραντεβού </u></b>   </button>
+            </a>
+        </div>
+    </div>
+
+
+</div>
+</form>
 </section>
 
 
