--- a/ypakp/views/index.html
+++ b/ypakp/views/index.html
@@ -147,60 +147,72 @@
             <div class="lezanta" id="linklez"><b>Χρήσιμοι Σύνδεσμοι</b></div>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                <div class="card">
-                    <img src="https://eservices.yeka.gr/(S(ti4pb2esqlmynzmzgq15yliz))/Images/logoolo.gif" class="card-img-top-2" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title"><u>Εργάνη</u></h5>
-                    <p class="card-text">ΠΛΗΡΟΦΟΡΙΑΚΟ ΣΥΣΤΗΜΑ ΕΞΥΠΗΡΕΤΗΣΗΣ ΕΠΙΧΕΙΡΗΣΕΩΝ
-                        ΥΠΟΥΡΓΕΙΟ ΕΡΓΑΣΙΑΣ ΚΑΙ ΚΟΙΝΩΝΙΚΩΝ ΥΠΟΘΕΣΕΩΝ.</p>
-                    </div>
-                </div>
-                </div>
-                <div class="col">
-                <div class="card">
-                    <img src="https://www.gsis.gr/system/files/inline-images/%CE%93%CE%93%CE%A0%CE%A3_logo_2020_website-Text-only.png" class="card-img-top-2" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title"><u>Γ.Γ.Π.Σ.Δ</u></h5>
-                    <p class="card-text">ΓΕΝΙΚΗ ΓΡΑΜΜΑΤΕΙΑ ΠΛΗΡΟΦΟΡΙΑΚΩΝ ΣΥΣΤΗΜΑΤΩΝ ΔΗΜΟΣΙΑΣ <br> ΔΙΟΙΚΗΣΗΣ.  </p>
-                    </div>
-                </div>
-                </div>
-                <div class="col">
-                <div class="card">
-                    <img src="https://www.kepea.gr/assets/images/logo.png" class="card-img-top-2" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title"><u>ΚΕ.Π.Ε.Α / Γ.Σ.Ε.Ε.</u></h5>
-                    <p class="card-text">ΚΕΝΤΡΟ ΠΛΗΡΟΦΟΡΗΣΗΣ ΕΡΓΑΖΟΜΕΝΩΝ & ΑΝΕΡΓΩΝ, ΓΕΝΙΚΗ ΣΥΝΟΜΟΣΠΟΝΔΙΑ ΕΡΓΑΤΩΝ ΕΛΛΑΔΟΣ.</p>
-                    </div>
-                </div>
-                </div>
-                <div class="col">
-                <div class="card">
-                    <img src="http://www.aade.gr/themes/clean/images/logo.svg" class="card-img-top-2" alt="...">
-                    <div class="card-body">
-                    <h5 class="card-title"><u>ΑΑΔΕ</u></h5>
-                    <p class="card-text">ΑΝΞΑΡΤΗΤΗ ΑΡΧΗ <br> ΔΗΜΟΣΙΩΝ <br> ΕΣΟΔΩΝ.</p>
-                    </div>
-                </div>
-                </div>
-                <div class="col">
+                <a href="https://eservices.yeka.gr">
                     <div class="card">
-                        <img src="https://opeka.gr/wp-content/uploads/2018/02/opeka-logo.png" class="card-img-top-2" alt="...">
+                        <img src="https://eservices.yeka.gr/(S(ti4pb2esqlmynzmzgq15yliz))/Images/logoolo.gif" class="card-img-top-2" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title"><u>ΟΠΕΚΑ</u></h5>
-                        <p class="card-text">ΟΡΓΑΝΙΣΜΟΣ ΠΡΟΝΟΙΑΚΩΝ <br> ΕΠΙΔΟΜΑΤΩΝ & <br> ΚΟΙΝΩΝΙΚΗΣ ΑΛΛΗΛΕΓΓΥΗΣ.</p>
+                        <h5 class="card-title"><u>Εργάνη</u></h5>
+                        <p class="card-text">ΠΛΗΡΟΦΟΡΙΑΚΟ ΣΥΣΤΗΜΑ ΕΞΥΠΗΡΕΤΗΣΗΣ ΕΠΙΧΕΙΡΗΣΕΩΝ
+                            ΥΠΟΥΡΓΕΙΟ ΕΡΓΑΣΙΑΣ ΚΑΙ ΚΟΙΝΩΝΙΚΩΝ ΥΠΟΘΕΣΕΩΝ.</p>
+                        </div>
                     </div>
+                </a>
+                </div>
+                <div class="col">
+                <a href="https://www.gsis.gr/">
+                    <div class="card">
+                        <img src="https://www.gsis.gr/system/files/inline-images/%CE%93%CE%93%CE%A0%CE%A3_logo_2020_website-Text-only.png" class="card-img-top-2" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title"><u>Γ.Γ.Π.Σ.Δ</u></h5>
+                        <p class="card-text">ΓΕΝΙΚΗ ΓΡΑΜΜΑΤΕΙΑ ΠΛΗΡΟΦΟΡΙΑΚΩΝ ΣΥΣΤΗΜΑΤΩΝ ΔΗΜΟΣΙΑΣ <br> ΔΙΟΙΚΗΣΗΣ.  </p>
+                        </div>
+                    </div>
+                </a>
+                </div>
+                <div class="col">
+                <a href="https://www.kepea.gr/">
+                    <div class="card">
+                        <img src="https://www.kepea.gr/assets/images/logo.png" class="card-img-top-2" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"><u>ΚΕ.Π.Ε.Α / Γ.Σ.Ε.Ε.</u></h5>
+                            <p class="card-text">ΚΕΝΤΡΟ ΠΛΗΡΟΦΟΡΗΣΗΣ ΕΡΓΑΖΟΜΕΝΩΝ & ΑΝΕΡΓΩΝ, ΓΕΝΙΚΗ ΣΥΝΟΜΟΣΠΟΝΔΙΑ ΕΡΓΑΤΩΝ ΕΛΛΑΔΟΣ.</p>
+                        </div>
+                    </div>
+                </a>
+                </div>
+                <div class="col">
+                <a href="http://www.aade.gr/">
+                    <div class="card">
+                        <img src="http://www.aade.gr/themes/clean/images/logo.svg" class="card-img-top-2" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title"><u>ΑΑΔΕ</u></h5>
+                        <p class="card-text">ΑΝΞΑΡΤΗΤΗ ΑΡΧΗ <br> ΔΗΜΟΣΙΩΝ <br> ΕΣΟΔΩΝ.</p>
+                        </div>
+                    </div>
+                </a>
+                </div>
+                <div class="col">
+                    <a href="https://opeka.gr/">
+                        <div class="card">
+                            <img src="https://opeka.gr/wp-content/uploads/2018/02/opeka-logo.png" class="card-img-top-2" alt="...">
+                            <div class="card-body">
+                            <h5 class="card-title"><u>ΟΠΕΚΑ</u></h5>
+                            <p class="card-text">ΟΡΓΑΝΙΣΜΟΣ ΠΡΟΝΟΙΑΚΩΝ <br> ΕΠΙΔΟΜΑΤΩΝ & <br> ΚΟΙΝΩΝΙΚΗΣ ΑΛΛΗΛΕΓΓΥΗΣ.</p>
+                        </div>
+                    </a>
                 </div>
                 </div>
                     <div class="col">
-                        <div class="card">
-                            <img src="http://www.oaed.gr/image/layout_set_logo?img_id=15141&t=1608887534932" class="card-img-top-2" alt="...">
-                            <div class="card-body">
-                            <h5 class="card-title"><u>ΟΑΕΔ</u></h5>
-                            <p class="card-text">ΟΡΓΑΝΙΣΜΟΣ ΑΠΑΣΧΟΛΗΣΗΣ <br> ΕΡΓΑΤΙΚΟΥ <br> ΔΥΝΑΜΙΚΟΥ.</p>
-                        </div>
+                        <a href="http://www.oaed.gr/">
+                            <div class="card">
+                                <img src="http://www.oaed.gr/image/layout_set_logo?img_id=15141&t=1608887534932" class="card-img-top-2" alt="...">
+                                <div class="card-body">
+                                <h5 class="card-title"><u>ΟΑΕΔ</u></h5>
+                                <p class="card-text">ΟΡΓΑΝΙΣΜΟΣ ΑΠΑΣΧΟΛΗΣΗΣ <br> ΕΡΓΑΤΙΚΟΥ <br> ΔΥΝΑΜΙΚΟΥ.</p>
+                            </div>
+                        </a>
                     </div>
-                    </div>
+                </div>
             </div>
         </div>
         
