--- a/ypakp/views/header.html
+++ b/ypakp/views/header.html
@@ -70,7 +70,7 @@
                     <a class="btn btn-light btn-lg nav-link active" aria-current="page" href="../routes/index.php" id="darkchoice"> <i class="fas fa-home"></i> Αρχική Σελίδα</a>
                   </li>
                   <li class="nav-item">
-                    <a class="btn btn-light btn-lg nav-link active" href="#" id="darkchoice"><i class="fas fa-phone-volume"></i> Επικοινωνία </a>
+                    <a class="btn btn-light btn-lg nav-link active" href="../routes/telecom.php" id="darkchoice"><i class="fas fa-phone-volume"></i> Επικοινωνία </a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="btn btn-light btn-lg nav-link active dropdown-toggle" href="#" id="darkchoice" role="button" data-bs-toggle="dropdown" aria-expanded="false">
