--- a/ypakp/views/index.html
+++ b/ypakp/views/index.html
@@ -133,10 +133,10 @@
                     <!-- <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg   btn-outline-primary"> <div class="con1"> <b>  Κλείστε <br>Ραντεβού</b></div></button> -->
                 </div>
                 <div class="col ser">
-                    <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg  btn-outline-primary"><div class="con"><b> Ηλεκτρονική Φόρμα Επικοινωνίας</b></div></button>
+                    <a class="p-3 border shadow border-dark rounded-pill btn btn-lg  btn-outline-primary" href="https://www.ypakp.gr/texts/editor_uploads/files/e-mail_armodiothtes_site.pdf" role="button"><div class="con"><b> Ηλεκτρονική Φόρμα Επικοινωνίας</b></div></a>
                 </div>
                 <div class="col ser">
-                    <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary"><div class="con"><b> Τηλέφωνα Επικοινωνίας</b></div></button>
+                    <a class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary" href="https://www.ypakp.gr/texts/editor_uploads/files/THLEFONIKOS_KATALOGOS_YPEKYP.pdf" role="button"><div class="con"><b> Τηλέφωνα Επικοινωνίας</b></div></a>
                 </div>
             </div>
         </div>
