--- a/ypakp_backup/views/header.html
+++ b/ypakp_backup/views/header.html
@@ -15,12 +15,10 @@
         <!-- Other CSS Files -->
         <link rel="stylesheet" href="../styling/partials.css">
 
-
-    </head>
   <body>
-    <!-- </head> -->
+    </head>
 
-       <!-- Navbar for COVID -->
+        <!-- Navbar for COVID -->
 
         <div class="threenavs">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="covnav">
@@ -109,8 +107,8 @@
                 </ul>
 
                 <form class="d-flex">
-                  <a class="button btn btn-lg btn-outline-dark" id="register" href="../routes/login2.php" > <i class="fas fa-user"></i>Είσοδος</a>
-                  <a class="button btn btn-lg btn-outline-dark" id="register" href="../routes/signUp.php" > <i class="fas fa-user-plus"></i>Εγγραφή</a>
+                  <button class="button btn btn-lg btn-outline-dark " id="register"><i class="fas fa-user"></i>Είσοδος</button>
+                  <button class="button btn btn-lg btn-outline-dark " id="register"><i class="fas fa-user-plus"></i>Εγγραφή</button>
                 </form>
               </div>
             </div>
@@ -146,12 +144,12 @@
                     </ul>
                     <form class="d-flex">
                       <input class="form-control me-2 border border-dark border-2" type="search" placeholder="Αναζήτηση" aria-label="Searh" id="searchbar">
-                      <button class="btn btn-outline-light" ><i class="fas fa-search"></i></button>
+                      <button class="btn btn-outline-light" type="submit"><i class="fas fa-search"></i></button>
                     </form>
               </div>
             </div>
         </nav>
-      </div>
+        </div>
 
 
         
