--- a/ypakp/styling/employer.css
+++ b/ypakp/styling/employer.css
@@ -3,57 +3,28 @@
     height:800px;
 }
 
-.covidh{
-    padding-top: 20px;
+.carh{
+    height:700px !important;
 }
 
-.white{
-    color: white;
+.num-left{
+    float: left;
 }
+
+.centerize{
+    text-align: center !important;
+}
+
+@media (min-width: 768px) {
+    .h-md-100 { height: 700px; }
+}
+.btn-round { border-radius: 30px; }
+.bg-cyan { background: #7CB0CB; }
+.bg-lcyan { background: #B6D3E2; }
+
 .msize{
     font-size: 50px;
 }
-
-.left_col{
-    padding-right: 20px;
-}
-
-.right_col{
-    margin-left: 10px;
-}
-
-.imgcon{
-    background-image:url("../imgs/GettyImages.jpg");
-    background-size:cover;
-    background-position:center;
-    height:1000px;
-}
-
-.left{
-    padding-left: 360px;
-}
-
-.left2{
-    padding-left: 280px ;
-}
-
-.icon_style{
-    font-size: 50px;
-}
-
-.dropsize{
-    padding-left: 130px ;
-    text-align: center;
-}
-
-.margtxt{
-    margin-left: -70px;
-}
-
-.margln{
-    margin-left: -128px;
-}
-
 
 ul {
 	margin:0;
@@ -76,8 +47,9 @@ ul {
 .nav li > a {
 	text-align: center !important;
 	position:relative !important;
-	padding-left: 60px;
-	padding-right: 60px;
+	padding-left: 10px;
+    /*padding-right: 60px;*/
+    /*padding-left: 47px;*/
 }
 .nav li > button {
 	text-align: center;
@@ -219,53 +191,3 @@ ul {
 	border-left-color:transparent;
 	border-top-color:black
 }
-
-/* allow touch to play *//*
-.nav .touch-only{display:none;left :-10px}
-.touch-device .nav .touch-only{display:inline-block}
-.touch-device  .nav .touch-only a{background:#000;color:#fff;}
-
-/* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd}
-  
-  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-  .show {display:block;}
