--- a/ypakp/views/header.html
+++ b/ypakp/views/header.html
@@ -72,7 +72,7 @@
                     <a class="btn btn-light btn-lg nav-link active" aria-current="page" href="../routes/index.php" id="darkchoice"> <i class="fas fa-home"></i> Αρχική Σελίδα</a>
                   </li>
                   <li class="nav-item">
-                    <a class="btn btn-light btn-lg nav-link active" href="#" id="darkchoice"><i class="fas fa-phone-volume"></i> Επικοινωνία </a>
+                    <a class="btn btn-light btn-lg nav-link active" href="../routes/telecom.php" id="darkchoice"><i class="fas fa-phone-volume"></i> Επικοινωνία </a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="btn btn-light btn-lg nav-link active dropdown-toggle" href="#" id="darkchoice" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -103,7 +103,9 @@
                               <li><a class="dropdown-item" href="#"><img class="flags" src="../imgs/france.jpg"> Γαλλικά</a></li>
                             </ul>
                           </div>                        
-                          <button type="button" class="btn btn-lg btn-outline-dark"><i class="fas fa-wheelchair"></i></button>
+
+                            <a class="btn btn-lg btn-outline-dark" type="button" href="https://images-na.ssl-images-amazon.com/images/I/91uFKWbHZzL._AC_SL1500_.jpg" > <i class="fas fa-wheelchair"></i></a>
+                            <!-- <button type="button" class="btn btn-lg btn-outline-dark"><i class="fas fa-wheelchair"></i> </button> -->
                       </div>
                   </li>
                 </ul>
@@ -126,10 +128,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services" aria-current="page" href="#">Υπουργείο</a>
+                            <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services" aria-current="page" href="#" >Υπουργείο</a>
                         </li>
                         <li class="nav-item">
-                            <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services" href="#">Εργασιακά</a>
+                            <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services"  href="#">Εργασιακά</a>
                         </li>
                         <li class="nav-item">
                             <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services" href="#">Κοινωνικές Υποθέσεις</a>
