--- a/ypakp/views/login.html
+++ b/ypakp/views/login.html
@@ -31,12 +31,30 @@
                     <label for="exampleFormControlInput2" class="form-label fs-4" n><b>Κωδικός</b> </label>
                     <input type="password" class="form-control" id="exampleFormControlInput2" name="pass" placeholder="Password" required>
                 </div>
-                
+
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault"> Keep me logged in </label>
+                            <!-- <h2 style="color:white;">Λάθος Όνομα ή Κωδικός χρήστη.</h2> -->
+                            <!-- <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"> -->
+                            <!-- <label class="form-check-label" for="flexCheckDefault"> -->
+                                
+                                <?php
+                                
+                                    if (isset($forgot)){
+                                        echo  '<h3 style="color:white; white-space: nowrap; margin-left: -25px; margin-top: 20px;"> <u>' . $forgot .'</u></h3>';
+                                    }
+                                    
+                                    else {
+
+                                        echo '<input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">';
+                                        echo ' <label class="form-check-label" for="flexCheckDefault"> ';
+                                        echo "Keep me logged in";
+                                        echo '</label>';
+                                    }
+                                
+                                ?>
+                            <!-- </label> -->
                         </div>
                     </div>
                 </div>
