--- a/ypakp/views/signUp.html
+++ b/ypakp/views/signUp.html
@@ -1,1 +1,138 @@
-<h1>TI LEEI BRO MOU? 8ELEIS NA KANEIS SIGNUP? ANTE GAMHSOU</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Form-v4 by Colorlib</title>
+	<!-- Mobile Specific Metas -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<!-- Font-->
+	<!-- <link rel="stylesheet" type="text/css" href="../styling/signUp.css/opensans-font.css"> -->
+	<link rel="stylesheet" type="text/css" href="../styling/fonts/line-awesome/css/line-awesome.min.css">
+	<!-- Jquery -->
+	<link rel="stylesheet" href="https://jqueryvalidation.org/files/demo/site-demos.css">
+	<!-- Main Style Css -->
+    <link rel="stylesheet" href="../styling/signUp.css"/>
+</head>
+<body class="form-v4">
+	<div class="page-content">
+		<div class="form-v4-content" >
+			<div class="form-left">
+
+                <h2>Εγγράψου τώρα στο Υπουργείο Εργασίας!</h2>
+				<p class="text-1 space"><span> Καλωσήρθατε στην νέα λειτουργία του Υπουργείου Εργασίας ! </span> Τώρα χάρις στον επανασχεδιασμό του ιστοτόπου, προσφέρεται για πρώτη φορά η δυνατότητα Εγγραφής στον ιστότοπο του Υπουργείου Εργασίας.</p>
+				<p class="text-1 space"><span>Αμέτρητες Δυνατότητες:</span> Κρατήστε τα προσωπικά σας στοιχεία, δείτε εύκολα και γρήγορα τα νέα που σας ενδιαφέρουν ανάλογα το/τις επάγγελμά/προτιμήσεις σας, πραγματοποιήστε εργασιακές δηλώσεις και ανακτήστε τις στο λεπτό !</p>
+                <p class="text-1 space"><span>Δημιουργήστε λογαριασμό με μόνο 1 κλικ. </span> Το μόνο που έχετε να κάνετε είναι να συμπληρώσετε τα απαραίτητα στοιχεία που ζητούνται για την δημιουργία του προσωπικού σας λογαριασμού.</p>
+                <p class="text-1 space"><span>Η προσωποποιημένη πληροφόρηση πιο ευχάριστη από ποτέ.</span> Περιηγηθείτε στον ιστότοπο του Υπουργείου προσαρμοσμένο σε εσάς! Νέες δυνατότητες επεξεργασίας προφίλ και διαχείρηση λογαριασμού.</p>
+
+
+			</div>
+            
+            <form class="form-detail" action="" method="post">
+				<h2>Φόρμα Εγγραφής</h2>
+				<div class="form-group">
+					<div class="form-row form-row-1">
+						<label for="first_name">Όνομα</label>
+                        <input type="text" name="first_name" id="first_name" class="input-text" placeholder="π.χ Γίωργος" required>
+
+					</div>
+					<div class="form-row form-row-1">
+						<label for="last_name">Επώνυμο</label>
+						<input type="text" name="last_name" id="last_name" class="input-text" placeholder="π.χ Ντούλας" required>
+					</div>
+				</div>
+				<div class="form-row">
+					<label for="your_email">Email</label>
+					<input type="text" name="your_email" id="your_email" class="input-text"  placeholder="example@gmail.com" required pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
+                </div>
+                
+
+                <div class="form-row">
+                    <label for="password">Password</label>
+                    <input type="password" name="pass" id="password" class="input-text" required>
+                </div>
+                
+                <div class="form-row form-row-1">
+                    <label for="first_name">Όνομα Χρήστη</label>
+                    <input type="text" name="user" id="first-name" class="input-text" placeholder="π.χ Giwrgakis69" required>
+                </div>
+
+                <!-- <div class="btn-group" style="padding-bottom:25px;">
+                    <button type="button" class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    Επιλέξτε τύπο Εργασίας
+                    </button>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Εργαζόμενος</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Εργοδότης</a></li>
+                    </ul>
+                  </div> -->
+
+                  <label for="reg_select">Τύπος Εργασίας</label>
+                  <select class="form-select" aria-label="Default select example" name="reg_select" style="margin-bottom:35px;" required>
+                    <option disabled selected>Επιλέξτε τύπο Εργασίας</option>
+                    <!-- <option disabled>─────────────────────────────</option> -->
+                    <!-- <option disabled>  </option> -->
+                    <option value="Εργαζόμενος">Εργαζόμενος</option>
+                    <option value="Εργοδότης">Εργοδότης</option>
+                    <!-- <option value="3">Three</option> -->
+                  </select>
+
+				<div class="form-checkbox">
+					<label class="container"><p style="padding-top:10px; padding-bottom:20px;">I agree to the <a href="#" class="text">Terms and Conditions</a></p>
+					  	<input type="checkbox" name="checkbox" required>
+					  	<span class="checkmark"></span>
+					</label>
+				</div>
+                
+                <div class="form-row-last">
+					<input type="submit" name="submit" class="register" value="Εγγραφή">
+				</div>
+			</form>
+		</div>
+    </div>
+    
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
+	<script>
+		// just for the demos, avoids form submit
+		jQuery.validator.setDefaults({
+		  	debug: true,
+		  	success:  function(label){
+        		label.attr('id', 'valid');
+   		 	},
+		});
+		$( "#myform" ).validate({
+		  	rules: {
+			    password: "required",
+		    	comfirm_password: {
+		      		equalTo: "#password"
+		    	}
+		  	},
+		  	messages: {
+		  		first_name: {
+		  			required: "Please enter a firstname"
+		  		},
+		  		last_name: {
+		  			required: "Please enter a lastname"
+		  		},
+		  		your_email: {
+		  			required: "Please provide an email"
+		  		},
+		  		password: {
+	  				required: "Please enter a password"
+		  		},
+		  		comfirm_password: {
+		  			required: "Please enter a password",
+		      		equalTo: "Wrong Password"
+		    	}
+		  	}
+		});
+	</script>
+
+<script>
+    window.scrollTo(0, 370);
+</script>
+
+</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</html>
