--- a/ypakp/views/signUp.html
+++ b/ypakp/views/signUp.html
@@ -27,7 +27,7 @@
 
 			</div>
             
-            <form class="form-detail" action="" method="post">
+            <form class="form-detail" action="" method="POST">
 				<h2>Φόρμα Εγγραφής</h2>
 				<div class="form-group">
 					<div class="form-row form-row-1">
