--- a/ypakp/views/appointment.html
+++ b/ypakp/views/appointment.html
@@ -101,7 +101,7 @@
 
             <div class="col3">
                 <label for="appt-time" style="font-size:29px; margin-right:40px; color: white;" text-muted><b>Επιλέξτε ώρα:</b></label>
-                <input id="appt-time" type="time" name="appt-time" placeholder="Ώρα" min="08:00:00" max="18:00:00" style="font-size:30px;">
+                <input id="appt-time" type="time" name="appt-time" placeholder="Ώρα" style="font-size:30px;">
             </div>
 
             <div class=col3>
@@ -127,7 +127,7 @@
         <div class="col-lg-9 mx-auto" style="margin-top:15em;">
         <!-- <div class="d-grid gap-2 col-3 mx-auto" style="margin-top:15em;"> -->
             <a href="../routes/app_confirmed.php">
-                <button type="submit" class="btn btn-lg btn-success rounded-3 appointmentb" style="padding-top:20px; padding-bottom: 20px;"> <b><u>Επιβεβαίωση Δήλωσης Ραντεβού </u></b>   </button>
+                <button type="submit" class="btn btn-lg btn-success rounded-3 appointmentb" style="padding-top:20px; padding-bottom: 20px;">    <b><u>Επιβεβαίωση Δήλωσης Ραντεβού </u></b>   </button>
             </a>
         </div>
     </div>
