--- a/ypakp/views/covprev.html
+++ b/ypakp/views/covprev.html
@@ -1,3 +1,4 @@
+
 <link rel="stylesheet" href="../styling/breadcrumb.css">
 <link rel="stylesheet" href="../styling/covprev.css">
 
@@ -69,14 +70,14 @@
     <!--li class="touch-only"><a href="#nav">Close Subs</a></li-->
     <li><button onclick="myFunction()" class="first">Εργασιακό Κοινό</button>
       <ul id="open" class="next">
-        <li><a class="centerized" href="#">Εργαζόμενοι</a>
+        <li><a class="centerized" href="../routes/employeeCOVID.php">Εργαζόμενοι</a>
           <!-- <ul>
             <li><a href="#">Δημόσιοι Υπάλληλοι</a></li>
             <li><a href="#">Ιδιωτικοί Υπάλληλοι</a></li>
             <li><a href="#">Ελεύθεροι Επαγγελματίες</a></li>
           </ul> -->
         </li>
-        <li><a href="#">Εργοδότες</a></li>
+        <li><a href="../routes/employerCOVID.php">Εργοδότες</a></li>
         <li><a href="#">Άνεργοι</a></li>
         <li><a href="#">Συνταξιούχοι</a></li>
       </ul>
