--- a/ypakp/views/employee.html
+++ b/ypakp/views/employee.html
@@ -31,7 +31,7 @@
                 <br><br>
                 <p class="fs-4"><b class="fs-2 num-left">2.</b> Πώς μπορώ να κάνω <b>αναστολή σύμβασης εργασίας</b> <a class="fs-4" href="#"> Δείτε εδώ</a></p>
                 <br><br>
-                <p class="fs-4"><b class="fs-2 num-left">3.</b> Πώς μπορώ να κάνω αίτηση για <b>άδεια ειδικού σκοπού</b> <a class="fs-4" href="#"> Δείτε εδώ</a></p>
+                <p class="fs-4"><b class="fs-2 num-left">3.</b> Πώς μπορώ να κάνω αίτηση για <b>άδεια ειδικού σκοπού</b> <a class="fs-4" href="../routes/specialperm.php"> Δείτε εδώ</a></p>
                 <br><br>
                 <p class="fs-4"><b class="fs-2 num-left">4.</b> Online υπολογισμός δώρου Χριστουγέννων με αναστολή σύμβασης εργασίας <a class="fs-4" href="#"> Δείτε εδώ</a></p>
                 <br><br>
@@ -55,7 +55,7 @@
                           </ul> -->
                         </li>
                         <li><a class="fs-3" href="#">Αναστολή σύμβασης εργασίας</a></li>
-                        <li><a class="fs-3" href="#">Αίτηση άδειας ειδικού σκοπού</a></li>
+                        <li><a class="fs-3" href="../routes/specialperm.php">Αίτηση άδειας ειδικού σκοπού</a></li>
                         <li><a class="fs-3" href="#">Εμφάνιση επιδομάτων και δώρων</a></li>
                         <li><a class="fs-3" href="#">Εμφάνιση αρχείου εργασιακής κατάστασης</a></li>
                         <li><a class="fs-3" href="#">Απαλλαγή ασφαλιστικών εισφορών</a></li>
