--- a/ypakp/views/employer.html
+++ b/ypakp/views/employer.html
@@ -27,9 +27,9 @@
             <div class="text-black h-100 p-5 text-center justify-content-center">
                 <h2><u>Συχνές Ερωτήσεις  <i class="fas fa-info-circle"></i></u></h2>
                 <br><br>
-                <p class="fs-4"><b class="fs-2 num-left">1.</b> Κείμενο1 <a class="fs-4" href="#">Δείτε εδώ</a></p>
+                <p class="fs-4"><b class="fs-2 num-left">1.</b>Πώς μπορώ να κάνω <b>αναστολή σύμβασης εργασίας</b> <a class="fs-4" href="../routes/suspension.php">Δείτε εδώ</a></p>
                 <br><br>
-                <p class="fs-4"><b class="fs-2 num-left">2.</b> Κείμενο2 <a class="fs-4" href="#">Δείτε εδώ</a></p>
+                <p class="fs-4"><b class="fs-2 num-left">2.</b> Πώς μπορώ να κάνω αίτηση για <b>εργασία εξ αποστάσεως</b> <a class="fs-4" href="../routes/distancework.php">Δείτε εδώ</a></p>
                 <br><br>
                 <p class="fs-4"><b class="fs-2 num-left">3.</b> Κείμενο3 <a class="fs-4" href="#">Δείτε εδώ</a></p>
                 <br><br>
@@ -55,9 +55,9 @@
                             <li><a href="#">Ελεύθεροι Επαγγελματίες</a></li>
                           </ul> -->
                         </li>
-                        <li><a class="fs-2" href="#">Πρόσληψη εργαζομένων</a></li>
-                        <li><a class="fs-2" href="#">Απόλυση εργαζομένων</a></li>
-                        <li><a class="fs-2" href="#">Ααναστολή εργασίας</a></li>
+                        <li><a class="fs-3" href="#">Πρόσληψη-Απόλυση εργαζομένων</a></li>
+                        <li><a class="fs-2" href="../routes/distancework.php"> Εργασία εξ'αποστάσεως</a></li>
+                        <li><a class="fs-2" href="../routes/suspension.php">Ααναστολή εργασίας</a></li>
                       </ul>
                   </ul>    
             </div>
