--- a/ypakp/views/footer.html
+++ b/ypakp/views/footer.html
@@ -12,7 +12,7 @@
 
       <ul class=" col-md-3">
           <li class="nav-item" id="infobottom2">Ελληνική Δημοκρατία - Υπουργείο Εργασίας και Κοινωνικών Υποθέσεων.</li>
-          <li class="nav-item" id="infobottom3"><a href="https://yt3.ggpht.com/ytc/AAUvwnhaZkg2GKQCMYK6_E7KQw-sioRKvoBCsnnabA=s900-c-k-c0x00ffffff-no-rj" class="nav-link">Βοήθεια <i class="fas fa-question-circle"></i></a></li>
+          <li class="nav-item" id="infobottom3"><a href="#" class="nav-link">Βοήθεια <i class="fas fa-question-circle"></i></a></li>
       </ul>
 
       <ul class=" col-md-3">
@@ -32,4 +32,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" ></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+
 </html>
