--- a/ypakp/views/header.html
+++ b/ypakp/views/header.html
@@ -15,12 +15,10 @@
         <!-- Other CSS Files -->
         <link rel="stylesheet" href="../styling/partials.css">
 
-
-    </head>
   <body>
-    <!-- </head> -->
+    </head>
 
-       <!-- Navbar for COVID -->
+        <!-- Navbar for COVID -->
 
         <div class="threenavs">
         <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="covnav">
@@ -103,16 +101,14 @@
                               <li><a class="dropdown-item" href="#"><img class="flags" src="../imgs/france.jpg"> Γαλλικά</a></li>
                             </ul>
                           </div>                        
-
-                            <a class="btn btn-lg btn-outline-dark" type="button" href="https://images-na.ssl-images-amazon.com/images/I/91uFKWbHZzL._AC_SL1500_.jpg" > <i class="fas fa-wheelchair"></i></a>
-                            <!-- <button type="button" class="btn btn-lg btn-outline-dark"><i class="fas fa-wheelchair"></i> </button> -->
+                          <button type="button" class="btn btn-lg btn-outline-dark"><i class="fas fa-wheelchair"></i></button>
                       </div>
                   </li>
                 </ul>
 
                 <form class="d-flex">
-                  <a class="button btn btn-lg btn-outline-dark" id="register" href="../routes/login2.php" > <i class="fas fa-user"></i>Είσοδος</a>
-                  <a class="button btn btn-lg btn-outline-dark" id="register" href="../routes/signUp.php" > <i class="fas fa-user-plus"></i>Εγγραφή</a>
+                  <button class="button btn btn-lg btn-outline-dark " id="register"><i class="fas fa-user"></i>Είσοδος</button>
+                  <button class="button btn btn-lg btn-outline-dark " id="register"><i class="fas fa-user-plus"></i>Εγγραφή</button>
                 </form>
               </div>
             </div>
@@ -128,14 +124,11 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services" aria-current="page" href="#" >Υπουργείο</a>
+                            <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services" aria-current="page" href="#">Υπουργείο</a>
                         </li>
                         <li class="nav-item">
-
-                          <a class="button btn-lg border border-light border-2 rounded-pill nav-link active now " id="services" href="../routes/working.php">Εργασιακά</a>
-                            <!-- <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services"  href="#">Εργασιακά</a> -->
-
-                          </li>
+                            <a class="button btn-lg border border-light border-2 rounded-pill nav-link active now " id="services" href="../routes/working.php">Εργασιακά</a>
+                        </li>
                         <li class="nav-item">
                             <a class="button btn-lg border border-light border-2 rounded-pill nav-link active " id="services" href="#">Κοινωνικές Υποθέσεις</a>
                         </li>
@@ -151,12 +144,12 @@
                     </ul>
                     <form class="d-flex">
                       <input class="form-control me-2 border border-dark border-2" type="search" placeholder="Αναζήτηση" aria-label="Searh" id="searchbar">
-                      <button class="btn btn-outline-light" ><i class="fas fa-search"></i></button>
+                      <button class="btn btn-outline-light" type="submit"><i class="fas fa-search"></i></button>
                     </form>
               </div>
             </div>
         </nav>
-      </div>
+        </div>
 
 
         
