--- a/ypakp/views/index.html
+++ b/ypakp/views/index.html
@@ -108,10 +108,10 @@
             <div class="lezanta"><b>Υπηρεσίες:</b></div>
             <div class="row row-cols-1 row-cols-lg-4 g-2 g-lg-3">
                 <div class="col ser">
-                    <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary"><div class="ser2" ><b>Εργαζόμενοι</b></div></button>
+                    <a href="../routes/employee.php" type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary"><div class="ser2" ><b>Εργαζόμενοι</b></div></a>
                 </div>
                 <div class="col ser">
-                    <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary"><div class="ser2"><b>Εργοδότες</b></div></button>
+                    <a href="../routes/employer.php" type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary"><div class="ser2"><b>Εργοδότες</b></div></a>
                 </div>
                 <div class="col ser">
                     <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary"><div class="ser2"><b>Συνταξιούχοι</b></div></button>
@@ -133,17 +133,10 @@
                     <!-- <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg   btn-outline-primary"> <div class="con1"> <b>  Κλείστε <br>Ραντεβού</b></div></button> -->
                 </div>
                 <div class="col ser">
-
-
                     <a class="p-3 border shadow border-dark rounded-pill btn btn-lg  btn-outline-primary" href="https://www.ypakp.gr/texts/editor_uploads/files/e-mail_armodiothtes_site.pdf" role="button"><div class="con"><b> Ηλεκτρονική Φόρμα Επικοινωνίας</b></div></a>
-                    <!-- <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg  btn-outline-primary"><div class="con"><b> Ηλεκτρονική Φόρμα Επικοινωνίας</b></div></button> -->
-
                 </div>
                 <div class="col ser">
-
                     <a class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary" href="https://www.ypakp.gr/texts/editor_uploads/files/THLEFONIKOS_KATALOGOS_YPEKYP.pdf" role="button"><div class="con"><b> Τηλέφωνα Επικοινωνίας</b></div></a>
-                    <!-- <button type="button" class="p-3 border shadow border-dark rounded-pill btn btn-lg btn-outline-primary"><div class="con"><b> Τηλέφωνα Επικοινωνίας</b></div></button> -->
-
                 </div>
             </div>
         </div>
